syntax = "proto3";

import "google/protobuf/empty.proto";

package cosmos_notifier_grpc;

option go_package = "github.com/shifty11/cosmos-notifier/services/grpc/protobuf/subscription_service";

service SubscriptionService {
  rpc ListSubscriptions (google.protobuf.Empty) returns (ListSubscriptionsResponse) {}
  rpc ToggleChainSubscription (ToggleChainSubscriptionRequest) returns (ToggleSubscriptionResponse) {}
  rpc ToggleContractSubscription (ToggleContractSubscriptionRequest) returns (ToggleSubscriptionResponse) {}
  rpc AddDao (AddDaoRequest) returns (stream AddDaoResponse) {}
  rpc DeleteDao (DeleteDaoRequest) returns (google.protobuf.Empty) {}
  rpc EnableChain (EnableChainRequest) returns (google.protobuf.Empty) {}
}

message SubscriptionStats {
  int32 total = 1;
  int32 telegram = 2;
  int32 discord = 3;
}

message Subscription {
  int64 id = 1;
  string name = 2;
  bool is_subscribed = 3;
  bool is_enabled = 4;
  string thumbnail_url = 5;
  string contract_address = 6;
  SubscriptionStats stats = 7;
}

message ChatRoom {
  int64 id = 1;
  string name = 2;
  enum Type {
    TYPE_UNSPECIFIED = 0;
    TELEGRAM = 1;
    DISCORD = 2;
  }
  Type type = 3;
  repeated Subscription subscriptions = 4;
}

message ListSubscriptionsResponse {
  repeated ChatRoom chain_chat_rooms = 1;
  repeated ChatRoom contract_chat_rooms = 2;
}

message ToggleChainSubscriptionRequest {
  int64 chatRoomId = 1;
  int64 chainId = 2;
}

message ToggleContractSubscriptionRequest {
  int64 chatRoomId = 1;
  int64 contractId = 2;
}

message ToggleSubscriptionResponse {
  bool isSubscribed = 1;
}

message AddDaoRequest {
  string contractAddress = 1;
  string customQuery = 2;
}

message AddDaoResponse {
  enum Status {
    STATUS_UNSPECIFIED = 0;
    ADDED = 1;
    ALREADY_ADDED = 2;
    IS_ADDING = 3;
    FAILED = 4;
  }
  Status status = 1;
  string name = 2;
  string contractAddress = 3;
}

message DeleteDaoRequest {
  int64 contractId = 1;
}

message EnableChainRequest {
  int64 chainId = 1;
  bool isEnabled = 2;
}